--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,55 @@ header nav ul li a:hover {
   background-position: center;
   min-height: 250px;
   display: flex;
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.box-left {
+  position: absolute;
+  bottom: 50px;
+  left: 0px;
+  
+  padding: 3vw 0vw;
+  background-color: rgba(255,0,0,0.7);
+  
+}
+
+.box-left h3{
+  text-align: left;
+  padding: 0vw 5vw;
+  font-size: 45px;
+  margin: 5px 0px;
+  
+}
+
+.box-left h4 {
+  text-align: left;
+  padding: 0vw 5vw;
+}
+
+.box-center {
+  position: absolute;
+  top: 65%;
+  left: 0px;
+  
+  
+  background-color: rgba(255,0,0,0.7);
+  
+}
+
+.box-center h3{
+  text-align: left;
+  padding: 0vw 0vw;
+  font-size: 42px;
+  margin: 0px 0px;
+  
+}
+
+.box-center h4 {
+  text-align: left;
+  padding: 0vw 0vw;
 }
 
 .work-right-bottom-cpntainer {
@@ -193,6 +242,7 @@ header nav ul li a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  
   }
 
 .work-right-top-cpntainer img {
@@ -208,6 +258,9 @@ header nav ul li a:hover {
   min-height: 250px;
   min-width: 35vw;
   width: 35vw;
+  position: relative;
+  text-align: center;
+  color: white;
 }
 
 .flex-item-bottom img {
