--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,3 +336,98 @@ footer nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
+
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2, footer div {
+    text-align: center;
+    width: 100%;
+  }
+
+  .work-right-top-cpntainer {
+    width: 100%;
+    
+  }
+
+  .work-right-bottom-cpntainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .work-right-top-cpntainer {
+    text-align: center;
+  }
+
+  .section-title {
+    width: 80%;
+  }
+  
+  .work {
+    flex: 0 70%;
+  }
+  
+  .contact-info iframe{
+    flex: 1 100%;
+  }
+
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+  section {
+    padding: 30px 15px;
+  }
+
+  .work h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+  .work {
+    display: flex;
+  }
+
+  .work-right-top-cpntainer, .work-right-bottom-cpntainer {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: space-between;
+    /* flex-direction: row; */
+    
+    
+  }
+
+  .flex-item-bottom img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    
+  }
+
+  .step-text {
+    flex: 100%;  
+  }
+
+}
+
