--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,3 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/*--------------------------------above is html reset*/
-
-
 /*--------------------------------header*/
 header {
   padding: 20px 35px;
@@ -152,6 +105,10 @@ header nav ul li a:hover {
   font-size: 24px;
   margin: 2vw 0;
 }
+.section-title h1 {
+  font-size: 35px;
+  font-weight: bold;
+}
 
 /*-------------------------work-------------------*/
 .work {
@@ -167,8 +124,6 @@ header nav ul li a:hover {
 
 .section-title{
   text-align: center;
-  font-weight: bold;
-  font-size: 48px;
   color: navy;
   margin: 20px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -339,3 +294,38 @@ footer nav ul li a:hover {
   text-shadow: none;
 }
 
+@media screen and (max-width: 768px){
+  .box-center {
+    bottom: 0;
+  }
+  .box-center h4 {
+    margin: 2vw 0
+  }
+}
+
+@media screen and (max-width: 575px) {
+
+  .section-title h1 {
+    font-size: 20px;
+  }
+
+  h3, h4 {
+    font-size: 5px;
+  }
+  .box-left {
+    width: 80%;
+    height: 20%;
+  }
+  .box-left h3{
+    font-size: 8vw;
+  }
+  .work-right-top-cpntainer img {
+    height: 100%;
+
+  }
+  .flex-item-bottom {
+    width: 100%;
+  }
+
+  
+}
